--- a/index.html
+++ b/index.html
@@ -5,24 +5,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lista zadań</title>
     <link href="css/style.css" rel="stylesheet">
-    <link href="css/flex.css" rel="stylesheet">
-    <link href="css/containter.css">
     <link href="css/form.css" rel="stylesheet">
-    <link href="css/element.css" rel="stylesheet">
+    <link href="css/tasks.css" rel="stylesheet">
+    <link href="css/section.css" rel="stylesheet">
+    <link href="css/button" rel="stylesheet">
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
     <script defer src="js/script.js"></script>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,400;0,700;0,900;1,100;1,400;1,700;1,900&display=swap"
+        rel="stylesheet">
 </head>
 
-<body>
-    <form class="js-form">
-        <input class="js-newTask">
-        <button>Dodaj zadanie</button>
-    </form>
+</head>
 
-<ul class="js-tasks"></ul>
-
+<body class="body">
+    <main class="main">
+        <header class="header">
+            <h1>Lista zadań</h1>
+        </header>
+        <section class="section">
+            <h2 class="section__header">Dodaj nowe zadanie</h2>
+            <div class="section__body">
+                <form class="form js-form">
+                    <input class="form__newTask js-newTask" placeholder="Co jest do zrobienia?" />
+                    <button class="form__button js-formButton">Dodaj zadanie</button>
+                </form>
+            </div>
+        </section>
+        <section class="section">
+            <header class="section__header">
+                <h2 class="section__title">Lista zadań</h2>
+                <div class="buttons js-buttons"></div>
+            </header>
+            <div class="section__body">
+                <ul class="tasks js-tasks"></ul>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
