--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,400;0,700;0,900;1,100;1,400;1,700;1,900&display=swap"
         rel="stylesheet">
         <link rel="icon" href="images/ikona.png">
+        <meta property ="og:image" content="images/List-tasks.png">
 </head>
 
 </head>
