--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista zadań</title>
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/header.css" rel="stylesheet">
+    <link href="css/content.css" rel="stylesheet">
     <link href="css/form.css" rel="stylesheet">
-    <link href="css/tasks.css" rel="stylesheet">
+    <link href="css/list.css" rel="stylesheet">
     <link href="css/section.css" rel="stylesheet">
-    <link href="css/button" rel="stylesheet">
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
     <script defer src="js/script.js"></script>
     <link
@@ -18,34 +19,27 @@
         rel="stylesheet">
         <link rel="icon" href="images/ikona.png">
         <meta property ="og:image" content="images/List-tasks.png">
-</head>
-
-</head>
-
-<body class="body">
-    <main class="main">
-        <header class="header">
-            <h1>Lista zadań</h1>
-        </header>
-        <section class="section">
-            <h2 class="section__header">Dodaj nowe zadanie</h2>
-            <div class="section__body">
-                <form class="form js-form">
-                    <input class="form__newTask js-newTask" placeholder="Co jest do zrobienia?" />
-                    <button class="form__button js-formButton">Dodaj zadanie</button>
-                </form>
-            </div>
-        </section>
-        <section class="section">
-            <header class="section__header">
-                <h2 class="section__title">Lista zadań</h2>
-                <div class="buttons js-buttons"></div>
+        <body class="body">
+            <header class="header">
+                <h1>Lista zadań</h1>
             </header>
-            <div class="section__body">
-                <ul class="tasks js-tasks"></ul>
-            </div>
-        </section>
-    </main>
-</body>
-
-</html>
+            <main class="content">
+                <section class="section">
+                    <h2 class="section__header">Dodaj nowe zadanie</h2>
+                    <form class="form js-form">
+                        <input autofocus class="form__input js-newTask" name="task" placeholder="Co jest do zrobienia?">
+                        <button class="form__button">Dodaj zadanie</button>
+                    </form>
+                </section>
+                <section class="section section--tasks">
+                    <div class="section__container">
+                        <h2 class="section__header section__header-second">Lista zadań</h2>
+                        <div class="section__buttonsContainer js-buttons"></div>
+                    </div>
+                    <ul class="list js-tasks">
+                    </ul>
+                </section>
+            </main>
+        </body>
+        
+        </html>
